# vintagewisdom

./: .env.example  .gitignore  1.json  ARCHITECTURE.md  DESIGN.md  NEXT_UPDATES.md  README.md  STRUCTURE.md  UI-DESIGN.md  docker-compose.yml  pyproject.toml
config/: default.yaml
docs/: OPTIMIZATION_SUMMARY.md  README.md
docs/api/: API_SPECIFICATION.md
docs/architecture/: ARCHITECTURE.md  STRUCTURE.md
docs/deployment/: DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  QUICK_DEPLOY.md
docs/design/: UI-DESIGN-LIGHT.md  UI-DESIGN.md
docs/development/: FRONTEND_OPTIMIZATION.md  QUICK_START_GUIDE.md
docs/roadmap/: NEXT_UPDATES.md
examples/: fintech_cases.json
examples/import-templates/: README.md  cases_array.json  cases_structured.csv  cases_wrapped.json  cases_zh_headers.csv  decision_migration_note.docx
frontend/: README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/: sigma-edge-curve.d.ts
frontend/src/app/: globals-light.css  globals.css  layout.tsx  page.tsx
frontend/src/components/: AppShell.tsx  DomainSelector.tsx  ErrorBoundary.tsx  ErrorMessage.tsx  GraphView.tsx  GraphViewSigma.tsx  Skeleton.tsx
frontend/src/hooks/: useTaskPolling.ts
frontend/src/lib/: api-error.ts  api.ts  domains.ts  sigmaPrograms.ts
scripts/: backup.sh  deploy.sh  health_check.sh  restore.sh
src/vintagewisdom/: __main__.py
tests/unit/: test_case_added_event_chain.py  test_database_features.py  test_document_extract_validation.py  test_imports.py  test_plugins_default_load.py  test_retriever_filters_test_cases.py  test_web_api_contracts.py
(+90 files in other folders)
